--- a/android/app/src/main/res/layout/widget_main.xml
+++ b/android/app/src/main/res/layout/widget_main.xml
@@ -52,6 +52,7 @@
         android:layout_height="wrap_content"
         android:text="DESCRIPTION"
         android:textColor="#C1C1C1"
+        android:gravity="center"
         android:textSize="15sp"
         android:layout_marginTop="3dp" />
 
