Fixed Widget Issues

--- a/android/app/src/main/res/xml/main_widget_info.xml
+++ b/android/app/src/main/res/xml/main_widget_info.xml
@@ -7,5 +7,5 @@
     android:maxResizeHeight="220dp"
     android:updatePeriodMillis="0"
     android:initialLayout="@layout/widget_main"
-    android:resizeMode="vertical"
+    android:resizeMode="none"
     android:widgetCategory="home_screen" />
